--- a/wp-content/themes/virtualstock/sass/theme/modules/_boxes.scss
+++ b/wp-content/themes/virtualstock/sass/theme/modules/_boxes.scss
@@ -16,6 +16,7 @@
     margin: auto;
     @media only screen and (max-width: 767px) {
         margin-bottom: 30px;
+        padding: 50px;
     }
 
     .inner-box-wrapper {   
